Update for Roxbury League
Updated rankings and preset keepers for my league, also changed number of required players (only 2 WR, added TE)

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 	<ul>
-		<li><a href="http://trevorpostma.com/keeper">home</a></li>
+		<li><a href="C:\Users\dmanzo\Documents\FantasyFootball\keeper\index.html">home</a></li>
 	</ul>
 	<p id="instructions">Configure your draft.</p>
 	<form id="form">
-		<p><a href="javascript:void(0)" onclick="config('bib')" id="bib">CLICK HERE FOR BIB KEEPER PRESETS</a></p>
+		<p><a href="javascript:void(0)" onclick="config('rox17')" id="rox17">CLICK HERE FOR ROX17 KEEPER PRESETS</a></p>
 		<div class="select">
 			<select name="keepers" id="configKeepers" onchange="config()">
 				<option value="0">0</option>
@@ -37,6 +37,6 @@
 	</div>
 	<div id="teams">
 	</div>
-	<script type="text/javascript" src="draft.js"></script>
+	<script type="text/javascript" src="C:\Users\dmanzo\Documents\FantasyFootball\keeper\draft.js"></script>
 </body>
 </html>
