--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<ul>
-		<li><a href="C:\Users\dmanzo\Documents\FantasyFootball\keeper\index.html">home</a></li>
+		<li><a href=".\index.html">home</a></li>
 	</ul>
 	<p id="instructions">Configure your draft.</p>
 	<form id="form">
@@ -37,6 +37,6 @@
 	</div>
 	<div id="teams">
 	</div>
-	<script type="text/javascript" src="C:\Users\dmanzo\Documents\FantasyFootball\keeper\draft.js"></script>
+	<script type="text/javascript" src=".\draft.js"></script>
 </body>
 </html>
